# seasonal-workers

./: .gitignore  README.md  compose.yaml  docker-compose.yaml  keycloak.template.env  postgres-ads.template.env  postgres-keycloak.template.env  postgres-profile.template.env  postgres.template.env
.env/: postgres-profile.template.env
.github/: pull_request_template.md
.github/workflows/: ads.yaml  build-gateway.yaml  build-service-ad.yaml  java-ci.yaml  node-ci.yaml  profile.yaml
Documentation/: FEATURES.md  MICROSERVICES.md  MICROSERVICES_V2.md  RDBMS.md
Documentation/openAPI/: openapi.yml
backend/: .gitignore
backend/gateway/: .env  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
backend/keycloak/: realm.json
backend/proto/: Request.proto  Response.proto
backend/services/rust-service/nats-test/: Cargo.toml
backend/services/rust-service/nats-test/src/: main.rs
micro-services/gateway/: build.gradle
micro-services/profile/: build.gradle
micro-services/profile-service/: build.gradle
microservices/: Dockerfile  build.gradle  settings.gradle
microservices/ad-service/: package.json
microservices/ads-service/: build.gradle
microservices/discovery-server/: Dockerfile  build.gradle  settings.gradle
microservices/gateway/: build.gradle  package.json  tsconfig.json
mobile/: .env.development  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile-app/: .env.development  app.json  package-lock.json  package.json  tsconfig.json  utils.ts
mock/: README.md  db.json  routes.json
(+292 files in other folders)
