[package]
name = "nats-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]  
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
bytes = "1.5.0"
prost = "0.12.3"
proto = { path = "../proto" }
async-nats = { version = "0.33.0", features = ["service"] }